fix: start service & scrollbar paint

--- a/cli-ts/ui/src/app/app.component.scss
+++ b/cli-ts/ui/src/app/app.component.scss
@@ -21,6 +21,7 @@
 .page-content {
   flex: 1;
   overflow: auto;
+  scrollbar-gutter: stable;
   padding: 1.5rem;
   background-color: var(--bg-primary);
 }
